completed BE-3
